--- a/shelter/pages/main/style-adaptive.css
+++ b/shelter/pages/main/style-adaptive.css
@@ -1,19 +1,3 @@
-/* :root {
-  --font-additional: "Georgia", serif;
-  --color-primary: #f1cdb3;
-  --color-modal: #000000;
-  --color-transparent: transparent;
-  --color-light-s: #fafafa;
-  --color-light-m: #fddcc4;
-  --color-light-l: #f6f6f6;
-  --color-light-xl: #ffffff;
-  --color-dark-s: #cdcdcd;
-  --color-dark-m: #b2b2b2;
-  --color-dark-l: #545454;
-  --color-dark-xl: #4c4c4c;
-  --color-dark-3xl: #292929;
-} */
-
 /* -----------------------768px - 1279px------------------------- */
 @media (max-width: 1279px) {
   .container {
@@ -119,49 +103,52 @@
   .arrow {
     padding-bottom: 0;
   }
-
-  /* @keyframes move-right {
-      from {
-        left: -620px;
-      }
-      to {
-        left: -1240px;
-      }
+  /* ========================= */
+  @keyframes move-right {
+    from {
+      left: -640px;
     }
-    @keyframes move-left {
-      from {
-        left: -620px;
-      }
-      to {
-        left: 0px;
-      }
+    to {
+      left: -1260px;
     }
-  .transition-right {
-            animation-name: move-right;
-            animation-duration: 2s;
   }
+
+  @keyframes move-left {
+    from {
+      left: -640px;
+    }
+    to {
+      left: -20px;
+    }
+  }
+
+  .transition-right {
+    animation-name: move-right;
+    animation-duration: 2s;
+  }
+
   .transition-left {
-            animation-name: move-left;
-            animation-duration: 2s;
-  } */
+    animation-name: move-left;
+    animation-duration: 2s;
+  }
+
+  .carousel-wrapper {
+    width: 580px;
+  }
+
+  .carousel {
+    left: -640px;
+  }
+
   .card:nth-child(3n) {
     display: none;
   }
 
+  /* ========================= */
   .card {
     margin: 0;
-  }
-
-  .card1 {
-    margin-right: 20px;
-  }
-
-  .card2 {
     margin-left: 20px;
-  }
-
-  .card3 {
-    display: none;
+    margin-right: 20px;
   }
 
   .card-button {
@@ -348,9 +335,12 @@
 
   .header-nav {
     position: fixed;
+    /* height: 100%; */
+    /* height: 100vh; */
+    /* height: 823px; */
+    height: 5291px;
     width: 320px;
     right: -320px;
-    height: 823px;
     top: 0;
     background-image: url("../../assets/images/bg-burger-320.jpg");
     overflow-x: hidden;
@@ -395,6 +385,19 @@
     height: 100%;
   }
 
+  /* .shadow.active:hover .bottom {
+    background-color: brown;
+  } */
+  /* .close:hover .shadow.active-modal {
+  background-color: var(--color-light-m);
+  cursor: pointer;
+  color: red;
+} */
+  /* .shadow.active-h .logo {
+    background-color: var(--color-light-m);
+    cursor: pointer;
+    color: red;
+  } */
   /* ----------------------------NOT ONLY---------------------------- */
   .not-only-container {
     padding-top: 0;
@@ -508,22 +511,70 @@
     padding-top: 40px;
   }
   /* ======================== */
+
+  .carousel-wrapper {
+    margin-left: auto;
+    margin-right: auto;
+    width: 270px;
+    overflow: hidden;
+    box-sizing: border-box;
+  }
+
+  .carousel {
+    left: -315px;
+    position: relative;
+    display: flex;
+  }
+
   .card:nth-child(2n) {
     display: none;
   }
+
+  @keyframes move-right {
+    from {
+      left: -315px;
+    }
+    to {
+      left: -615px;
+    }
+  }
+
+  @keyframes move-left {
+    from {
+      left: -315px;
+    }
+    to {
+      left: -15px;
+    }
+  }
+
+  .transition-right {
+    animation-name: move-right;
+    animation-duration: 2s;
+  }
+
+  .transition-left {
+    animation-name: move-left;
+    animation-duration: 2s;
+  }
+
   /* ======================== */
+  .card-box {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
   .card {
     margin: 0 auto;
     text-align: center;
   }
 
-  .card1 {
+  /* .card1 {
     display: block;
   }
 
   .card2 {
     display: none;
-  }
+  } */
 
   .card-name {
     padding-top: 25px;
