--- a/shelter/pages/main/style-adaptive.css
+++ b/shelter/pages/main/style-adaptive.css
@@ -103,7 +103,20 @@
   .arrow {
     padding-bottom: 0;
   }
-  /* ========================= */
+
+  /* ----carousel---- */
+  .carousel-wrapper {
+    width: 580px;
+  }
+
+  .carousel {
+    left: -640px;
+  }
+
+  .card:nth-child(3n) {
+    display: none;
+  }
+
   @keyframes move-right {
     from {
       left: -640px;
@@ -122,29 +135,8 @@
     }
   }
 
-  .transition-right {
-    animation-name: move-right;
-    animation-duration: 2s;
-  }
+  /* --------------- */
 
-  .transition-left {
-    animation-name: move-left;
-    animation-duration: 2s;
-  }
-
-  .carousel-wrapper {
-    width: 580px;
-  }
-
-  .carousel {
-    left: -640px;
-  }
-
-  .card:nth-child(3n) {
-    display: none;
-  }
-
-  /* ========================= */
   .card {
     margin: 0;
     margin-left: 20px;
@@ -277,10 +269,6 @@
 
 /* ----------------------- 320 px - 767px ------------------------- */
 @media (max-width: 767px) {
-  body.active {
-    overflow: hidden;
-  }
-
   .container {
     max-width: 320px;
     padding: 0;
@@ -384,7 +372,17 @@
     width: 100%;
     height: 100%;
   }
-
+  /* .close:hover .shadow.active-modal {
+  background-color: var(--color-light-m);
+  cursor: pointer;
+  color: red;
+} */
+  /* .shadow.active .close-all {
+    background-color: var(--color-light-m);
+    cursor: pointer;
+    color: red;
+  } */
+  /* .card:hover .card-button  */
   /* .shadow.active:hover .bottom {
     background-color: brown;
   } */
@@ -510,20 +508,16 @@
     flex-direction: column;
     padding-top: 40px;
   }
-  /* ======================== */
 
+  /* ----carousel---- */
   .carousel-wrapper {
     margin-left: auto;
     margin-right: auto;
     width: 270px;
-    overflow: hidden;
-    box-sizing: border-box;
   }
 
   .carousel {
     left: -315px;
-    position: relative;
-    display: flex;
   }
 
   .card:nth-child(2n) {
@@ -548,17 +542,7 @@
     }
   }
 
-  .transition-right {
-    animation-name: move-right;
-    animation-duration: 2s;
-  }
-
-  .transition-left {
-    animation-name: move-left;
-    animation-duration: 2s;
-  }
-
-  /* ======================== */
+  /* --------------- */
   .card-box {
     padding-left: 15px;
     padding-right: 15px;
@@ -567,14 +551,6 @@
     margin: 0 auto;
     text-align: center;
   }
-
-  /* .card1 {
-    display: block;
-  }
-
-  .card2 {
-    display: none;
-  } */
 
   .card-name {
     padding-top: 25px;
