--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -39,6 +39,9 @@ html {
   font-weight: 400;
 }
 
+body.active {
+  overflow: hidden;
+}
 /* ----------------------------HEADER---------------------------- */
 
 .header {
@@ -202,6 +205,7 @@ html {
   background-color: var(--color-light-xl);
   background-size: 100%;
 }
+
 .about-container {
   padding-top: 77px;
   height: 588px;
@@ -327,7 +331,7 @@ html {
   padding-bottom: 3px;
 }
 
-/* ==================== */
+/* ----carousel---- */
 
 .carousel-wrapper {
   width: 1080px;
@@ -368,7 +372,8 @@ html {
   animation-duration: 2s;
 }
 
-/* ============================= */
+/* --------------- */
+
 .card-box {
   display: flex;
 }
@@ -495,18 +500,6 @@ html {
   background-color: var(--color-light-m);
   cursor: pointer;
 }
-
-/* .close:hover .shadow.active-modal {
-  background-color: var(--color-light-m);
-  cursor: pointer;
-  color: red;
-} */
-/* .shadow.active .close {
-  background-color: var(--color-light-m);
-  cursor: pointer;
-  color: red;
-} */
-/* .card:hover .card-button  */
 
 .modal-image {
   position: absolute;
