--- a/shelter/pages/pets/style2.css
+++ b/shelter/pages/pets/style2.css
@@ -39,6 +39,9 @@ html {
   font-weight: 400;
 }
 
+body.active {
+  overflow: hidden;
+}
 /* ----------------------------HEADER---------------------------- */
 .container {
   max-width: 1280px;
