--- a/shelter/pages/pets/style-adaptive2.css
+++ b/shelter/pages/pets/style-adaptive2.css
@@ -33,6 +33,7 @@
 
   .our-friends-catalog {
     padding-bottom: 0;
+    justify-content: space-evenly;
   }
 
   .card-box {
@@ -43,18 +44,13 @@
     margin-bottom: 30px;
   }
 
-  .card7,
-  .card8 {
-    display: none;
-  }
-
   .card-name {
     padding-top: 33px;
   }
 
   .card-button {
     padding: 14px 44px;
-    margin: 27px 0px;
+    /* margin: 27px 0px; */
   }
 
   .slider-block {
@@ -208,8 +204,9 @@
     position: fixed;
     width: 320px;
     right: -320px;
+    height: 1000vh;
     /* height: 823px; */
-    height: 2492px;
+    /* height: 2492px; */
     /* height: 100%; */
     /* height: 100vh; */
     top: 0;
@@ -275,40 +272,25 @@
     padding-bottom: 8px;
   }
 
-  .card4,
-  .card5,
-  .card6,
-  .card7,
-  .card8 {
-    display: none;
-    padding: 0;
-  }
-
-  .card4 {
-    padding: 0;
-  }
-
   .slider-block {
     padding-top: 0;
+    margin-top: 10px;
   }
 
   .slider-button {
-    width: 52px;
-    height: 52px;
-    border: 2px solid var(--color-dark-s);
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     margin: 0 5px;
   }
 
   .one {
     border: 2px solid var(--color-light-m);
+    background-color: var(--color-light-m);
+    color: var(--color-dark-3xl);
   }
 
   .switch {
+    color: var(--color-dark-3xl);
     border: 2px solid var(--color-primary);
+    transition: 0.7s;
   }
 
   /* ------modal------- */
