--- a/shelter/pages/pets/style-adaptive2.css
+++ b/shelter/pages/pets/style-adaptive2.css
@@ -251,6 +251,7 @@
     z-index: 2;
     width: 100%;
     height: 100%;
+    cursor: pointer;
   }
   /* ----------------------------OUR FRIENDS---------------------------- */
   .our-friends-container {
@@ -272,6 +273,11 @@
     padding-bottom: 8px;
   }
 
+  .card {
+    width: 270px;
+    margin-left: auto;
+    margin-right: auto;
+  }
   .slider-block {
     padding-top: 0;
     margin-top: 10px;
