--- a/shelter/pages/main/style-adaptive.css
+++ b/shelter/pages/main/style-adaptive.css
@@ -371,7 +371,7 @@
     background: rgba(41, 41, 41, 0.6);
     z-index: 2;
     width: 100%;
-    height: 100%;
+    height: 1000vh;
     cursor: pointer;
   }
 
