--- a/shelter/pages/pets/style-adaptive2.css
+++ b/shelter/pages/pets/style-adaptive2.css
@@ -250,7 +250,7 @@
     background: rgba(41, 41, 41, 0.6);
     z-index: 2;
     width: 100%;
-    height: 100%;
+    height: 1000vh;
     cursor: pointer;
   }
   /* ----------------------------OUR FRIENDS---------------------------- */
