--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -53,7 +53,7 @@ body.active {
   max-width: 1280px;
   margin: 0 auto;
   padding: 0 40px;
-  width: calc(100% - 40);
+  width: calc(100% - 40px);
 }
 
 .header-container {
