refactor: remake link to logo

--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -63,6 +63,10 @@ body.active {
   align-items: center;
 }
 
+.logo {
+text-decoration: none;
+}
+
 .logo-title {
   font-family: var(--font-additional);
   font-style: normal;
